--- a/dw9_delivery_app/pubspec.yaml
+++ b/dw9_delivery_app/pubspec.yaml
@@ -43,14 +43,14 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   top_snackbar_flutter: ^3.0.0+1
   blog: ^0.0.0
-  flutter_bloc: ^8.1.1
+  flutter_bloc: ^8.1.2
   equatable: ^2.0.5
   match: ^0.4.1
   auto_size_text: ^3.0.0
-  bloc: ^8.1.0
-  bloc_flutter: ^0.1.0
+  bloc: ^8.1.1
   shared_preferences: ^2.0.16
   validatorless: ^1.2.3
+  flutter_awesome_select: ^6.5.0
 
 dev_dependencies:
   flutter_test:
